--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,18 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   go_router: ^14.6.3
+  freezed: ^2.5.8
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
+  dartz: ^0.10.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  build_runner: ^2.4.14
+  json_serializable: ^6.9.2
 
 flutter:
 
