--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   freezed_annotation: ^2.4.4
   json_annotation: ^4.9.0
   dartz: ^0.10.1
+  equatable: ^2.0.7
 
 dev_dependencies:
   flutter_test:
