--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   json_annotation: ^4.9.0
   dartz: ^0.10.1
   equatable: ^2.0.7
+  dio: ^5.7.0
 
 dev_dependencies:
   flutter_test:
