--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,12 +15,16 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
   go_router: ^14.6.3
-  freezed: ^2.5.8
-  freezed_annotation: ^2.4.4
-  json_annotation: ^4.9.0
+  freezed: ^2.4.5
+  freezed_annotation: ^2.4.1
+  json_annotation: ^4.8.1
+  json_serializable: ^6.5.4
   dartz: ^0.10.1
   equatable: ^2.0.7
   dio: ^5.7.0
+  flutter_bloc: ^8.1.6
+  get_it: ^8.0.3
+  injectable: ^2.5.0
 
 dev_dependencies:
   flutter_test:
@@ -28,7 +32,7 @@ dev_dependencies:
 
   flutter_lints: ^5.0.0
   build_runner: ^2.4.14
-  json_serializable: ^6.9.2
+  injectable_generator: ^2.4.1
 
 flutter:
 
