--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter_bloc: ^8.1.6
   get_it: ^8.0.3
   injectable: ^2.5.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
