--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  auto_route: ^9.3.0+1
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
-  go_router: ^14.6.3
   freezed: ^2.4.5
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
@@ -26,15 +26,16 @@ dependencies:
   get_it: ^8.0.3
   injectable: ^2.5.0
   cached_network_image: ^3.4.1
+  flutter_localizations:
+    sdk: flutter
+  intl: any
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-
+  auto_route_generator: ^9.3.1
   flutter_lints: ^5.0.0
   build_runner: ^2.4.14
   injectable_generator: ^2.4.1
 
 flutter:
-
+  generate: true
   uses-material-design: true
